# tutorial-rust

./: .gitignore  README.md
blog_assert/: Cargo.toml
grpc-demo-grpc/: Cargo.toml
hello_macro_derive/: Cargo.toml
hello_tokio/: Cargo.toml
malti_thread_synchronous/: Cargo.toml
proto/: Cargo.toml
rust-lesson/: Cargo.toml
single_thread_asynchronous/: Cargo.toml
single_thread_asynchronous/src/: main.rs
single_thread_synchron/: Cargo.toml
single_thread_synchronous/: Cargo.toml
test_actix_web/: Cargo.toml
test_analytics/: Cargo.toml
test_chrono/: Cargo.toml
test_clap/: Cargo.toml
test_csv/: Cargo.toml
test_grpc_server/: Cargo.toml
test_proto/: Cargo.toml  build.rs
test_rand/: Cargo.toml
test_std/: Cargo.toml
test_url/: Cargo.toml
three_architecture/: .env  Cargo.toml  docker-compose.yml
three_architecture/docker/mysql/three_architecture_db/: users.ibd
three_architecture/docker/rust/: Dockerfile
three_architecture/migrations/2022-06-30-134812_create_posts/: up.sql
three_architecture/migrations/2022-06-30-141902_create_tasks/: up.sql
three_architecture/src/: data_access.rs  items.rs  lib.rs  main.rs  model.rs  presentation.rs  schema.rs
three_architecture/src/data_access/: data_access_tasks.rs  mod.rs  tasks.rs  users.rs
three_architecture/src/item/: tasks.rs
three_architecture/src/items/: item_tasks.rs  tasks.rs  users.rs
three_architecture/src/model/: model_tasks.rs  tasks.rs  users.rs
three_architecture/src/models/: user.rs
three_architecture/src/presentation/: mod.rs  presentation_tasks.rs  tasks.rs  users.rs
(+66 files in other folders)
