[package]
name = "single_thread_synchronous"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
reqwest = { version = "0.11.4", features = ["json"] }
serde = { version = "^1.0.130", features = ["derive"] }
serde_json = "^1.0.67"