[package]
name = "three_architecture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
diesel = { version = "1.4.8", features = ["mysql", "chrono"] }
dotenv = "0.15.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0.82"
chrono= "^0.4"